--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
       <artifactId>hadoop-common</artifactId>
       <version>3.2.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.struts</groupId>
+      <artifactId>struts2-core</artifactId>
+      <version>2.0.5</version>
+    </dependency>
   </dependencies>
 
 </project>
