--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>struts2-core</artifactId>
       <version>2.0.5</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.12.6</version>
+    </dependency>
   </dependencies>
 
   <build>
